Fix responsive issue on mobile phones

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ input, textarea {
 
 .bg-image-body {
     background-image: url("images/forrest.png");
-    height: 100%; 
+    min-height: 100%; 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -22,9 +22,10 @@ input, textarea {
 
 .card-outline {
     display: inline-block;
-    height: 80%;
+    height: 90%;
     width: 350px;
     margin-top: 5%;
+    margin-bottom: 5%;
     box-shadow: 5px 5px 50px #6d6d6d;
     background-color: #f2f2f2;
 }
@@ -99,6 +100,7 @@ input, textarea {
     color: #777777;
     background-color: #f2f2f2;
     padding: 10px 20px;
+    margin-bottom: 15px;
     border: 1px solid #777777;
     box-shadow: none;
     cursor: pointer;
